<resources>
    <string name="app_name">TravelDiary</string>
    <string name="about_text">Travel Diary is an application which helps users save some detail about their past travel experiences! \n\nExpand your travel history with Travel Diary and enjoy all the good memories!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string-array name="typesOfTransport">
        <item>Type of Travel</item> <!-- Hint item -->
        <item>Car</item>
        <item>Plane</item>
        <item>Train</item>
        <item>Boat</item>
        <item>On foot</item>
    </string-array>
    <string-array name="languages">
        <item>Select one</item> <!-- Hint item -->
        <item>English</item>
        <item>Romanian</item>
    </string-array>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="fullName">Full Name</string>
    <string name="noDestinations">No destinations available</string>
    <string name="home">Home</string>
    <string name="aboutUs">About Us</string>
    <string name="contactUs">Contact Us</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="deleteAccount">Delete account</string>
    <string name="deleteAllData">Delete all data</string>
    <string name="emailMe">Email me</string>
    <string name="subject">Subject</string>
    <string name="content">Content</string>
    <string name="send">SEND</string>
    <string name="darkMode">Dark mode</string>
    <string name="satelliteMode">Satellite Mode</string>
    <string name="language">Language</string>
    <string name="save">SAVE</string>
    <string name="back">BACK</string>
    <string name="sureQuestion">Are you sure?</string>
    <string name="logoutQuestion">Do you want to logout?</string>
    <string name="deleteAccountQuestion">Do you want to delete your account?</string>
    <string name="deleteDestinationQuestion">Do you want to delete this destination?</string>
    <string name="enterPassword">Enter Password</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="destinationName">Destination Name</string>
    <string name="destinationLocation">Location</string>
    <string name="destinationDate">Select Date</string>
    <string name="destinationGalery">Galery</string>
    <string name="destinationDescription">Description</string>
    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>
    <string name="settingsSaved">Settings have been saved!</string>
    <string name="destinationDeleted">Destination has been deleted!</string>
    <string name="accountDeleted">Account has been deleted!</string>
    <string name="dataDeleted">All data has been deleted!</string>
    <string name="incorrectPassword">Incorrect password!</string>
    <string name="wrongCredentials" translatable="false">Wrong credentials!</string>
    <string name="typeOfTravel">Type of Travel</string>
    <string name="submit">SUBMIT</string>
    <string name="changePhoto">Change photo</string>
    <string name="pleaseWriteTheSubject">Please write the subject!</string>
    <string name="photoSaved">Photo saved!</string>
    <string name="pleaseLogInFirst">Please log in first!</string>
    <string name="place">Place</string>
    <string name="weather">Weather</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="coordonates">Coordonates</string>
    <string name="noUserFound">No user has been found!</string>
    <string name="date">Date</string>
    <string name="typeOfTransport">Type of transport</string>
    <string name="description">Description</string>
    <string name="currentLanguage">English</string>
</resources>