<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/info"
            android:title="@string/aboutUs" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/contact_us"
            android:title="@string/contactUs" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
        <item
            android:id="@+id/nav_delete"
            android:icon="@drawable/delete"
            android:title="@string/deleteAccount" />
        <item
            android:id="@+id/nav_delete_all"
            android:icon="@drawable/delete_forever"
            android:title="@string/deleteAllData" />
    </group>
</menu>