<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    style="@style/loginStyle"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            style="@style/linearLayoutStyle">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="308dp"
                android:layout_height="80dp"
                style="@style/logoStyle" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/username"
                android:layout_marginTop="0dp"
                android:padding="8dp"
                android:hint="@string/username"
                style="@style/textSyle"
                android:drawablePadding="8dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/password"
                android:layout_marginTop="20dp"
                android:inputType="textPassword"
                android:padding="8dp"
                style="@style/textSyle"
                android:hint="@string/password"
                android:drawablePadding="8dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/login"
                android:id="@+id/loginButton"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                style="@style/buttonStyle"
                app:cornerRadius = "20dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/register"
                android:id="@+id/registerButton"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                style="@style/buttonStyle"
                app:cornerRadius = "20dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>