<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    style="@style/navHeaderStyle"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <TextView
        android:id="@+id/usernameHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="90dp"
        android:text="@string/nav_header_title"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/onlyTextStyle"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/usermailHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-5dp"
        android:layout_marginTop="5dp"
        android:text="@string/nav_header_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="10dp"
        style="@style/onlyTextStyle"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameHeader" />

    <ImageView
        android:id="@+id/userPhotoHeader"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="71dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="13dp"
        android:contentDescription="@string/nav_header_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
