<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/loginStyle"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/aboutImage"
            android:layout_width="match_parent"
            android:layout_height="192dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            style="@style/logoStyle" />

        <!-- LinkedIn ImageButton and TextView -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:gravity="center_vertical">

            <ImageButton
                android:id="@+id/linkedinButton"
                android:layout_width="61dp"
                android:layout_height="33dp"
                android:adjustViewBounds="true"
                style="@style/linkedinStyle"
                android:scaleType="fitCenter" />

            <TextView
                android:id="@+id/linkedInText"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:text="LinkedIn"
                android:textSize="30dp"
                style="@style/onlyTextStyle"
                android:layout_marginStart="8dp" />
        </LinearLayout>

        <!-- GitHub ImageButton and TextView -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginStart="40dp"
            android:gravity="center_vertical">

            <ImageButton
                android:id="@+id/githubButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                style="@style/githubStyle"
                android:scaleType="fitCenter" />

            <TextView
                android:id="@+id/githubText"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:text="GitHub"
                android:textSize="30dp"
                style="@style/onlyTextStyle"
                android:layout_marginStart="8dp" />
        </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:layout_gravity="center_horizontal"
            android:padding="10dp"


            style="@style/linearLayoutStyle">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/emailMe"
                android:gravity="center_vertical|center_horizontal"
                android:layout_gravity="center"
                android:id="@+id/email"
                android:textSize="25dp"
                style="@style/onlyTextStyle"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/subject"
                android:gravity="center_vertical|center_horizontal"
                android:layout_gravity="center"
                android:id="@+id/subjectText"
                style="@style/onlyTextStyle"
                android:layout_marginTop="10dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:hint="@string/content"
                android:gravity="center_vertical|center_horizontal"
                android:id="@+id/description"
                style="@style/onlyTextStyle"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/send"
                android:id="@+id/sendButton"

                android:layout_gravity="center"
                style="@style/buttonStyle"

                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>
